[tool.poetry]
name = "release-py"
version = "0.1.0"
description = "Release framework"
authors = ["György Kiss <kissgyorgy@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
