[tool.poetry]
name = "release-py"
version = "0.1.0"
description = "Release framework"
authors = ["György Kiss <kissgyorgy@me.com>"]
license = "MIT"
packages = [{ include = "release" }]

[tool.poetry.scripts]
release = "release.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
click = "^8.1.3"
pydantic = "^2.0.0"
pygit2 = "^1.9.2"
textual = "^0.73.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
