[project]
name = "release-py"
version = "0.1.0"
description = "Interactive release tool with a TUI"
license = "MIT"
readme = "README.md"
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]

requires-python = ">=3.13"

dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "pygit2>=1.17.0",
    "pyyaml>=6.0.2",
    "textual>=1.0.0",
]

[tool.hatch.build.targets]
wheel.packages = ["/release"]
sdist.packages = ["/release"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
